--- a/archive.njk
+++ b/archive.njk
@@ -1,12 +1,12 @@
 ---
 layout: layouts/home.njk
-permalink: /posts/
+permalink: /resources/
 eleventyNavigation:
-  key: Archive
+  key: Resources
   order: 2
 ---
 
-<h1>Archive</h1>
+<h1>Resources</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
