new styling and content

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,16 +6,18 @@
     <title>{{ title or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
+    <link rel="stylesheet" href="{{ '/css/base.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
   </head>
   <body>
     <header>
-      <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
+      <h1 class="home"><a href="{{ '/' | url }}" class="logo">{{ metadata.title }}</a></h1>
 
       {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
       <ul class="nav">
+      {# <li class="nav-item"><a>Homee</a></li> #}
       {%- for entry in collections.all | eleventyNavigation %}
         <li class="nav-item{% if entry.url == page.url %} nav-item-active{% endif %}"><a href="{{ entry.url | url }}">{{ entry.title }}</a></li>
       {%- endfor %}
@@ -36,10 +38,10 @@
           <li><a href="https://github.com/Looease" className="footer">Github</a></li>
         </ul>
         <ul>
-          <a href="index.html#iamprojects">Portfolio</a>
-          <li><Link to="kblSolutions.html" className="footer">KBL Solutions</Link></li>
-          <li><Link to="museumMeltdown.html"className="footer">Museum Meltdowm</Link></li>
-          <li><Link to="resources.html" className="footer">Resources</Link></li>
+          <a href="/">Portfolio</a>
+          <li><Link to="" className="footer">KBL Solutions</Link></li>
+          <li><Link to=""className="footer">Museum Meltdowm</Link></li>
+          <li><Link to="" className="footer">Resources</Link></li>
         </ul>
     </footer>
 
