--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,3 +1,7 @@
+<h1>Resources to become a Software Engineer</h1>
+
+<p>My route to becoming a Software Engineer was indirect. My degree is a bachelor of arts in History, and I got into tech sales when I graduated. Whilst I wouldn't change any of my experiences for the world, I do wish I had known more about Software Engineering at the time. These posts are a list of resources for all people looking to get into Software Engineering, or just get started in their tech career. </p>
+
 <ol reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
 {% for post in postslist | reverse %}
   <li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
