--- a/css/base.css
+++ b/css/base.css
@@ -23,14 +23,19 @@
     /* z-index: 9990; */
     background-color: var(--duck);
   }
+  header {
+    border-bottom: 1px dashed var(--lightgray);
+  }
+  header:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 /*   
 .navcontainerScroll{
   padding: 20px 0px 0px 0px;
   background-color: rgba(0, 0, 0, 0.2);
 }*/
-.nav{
-    margin-left: 25%;
-}
   .logo{
     height: auto;
     display: inline-block;
@@ -44,7 +49,25 @@
     letter-spacing: 1.2px;
     font-weight: 600;
     cursor: pointer;
-  } 
+  };
+  .nav {
+    /* padding-left: 600px; */
+    list-style: none;
+    display: flex;
+    align-self: flex-end;
+  }
+  .nav-item {
+    display: inline-block;
+    margin-right: 1em;
+  }
+  .nav-item a[href]:not(:hover) {
+    text-decoration: none;
+  }
+  .nav-item-active {
+    font-weight: 700;
+    text-decoration: underline;
+  }
+
   .hidden{
     display: none;
   }
@@ -137,46 +160,57 @@
    border-bottom: 1.5px solid white;
    margin-bottom: -12px;
    padding-bottom: 10.5px;
+  } 
+  */
+
+
+  /* @media screen and (max-width: 1320px){
+   .nav {
+    padding: 400px; 
+    list-style: none;
+    float: left; 
   }
-
-
-  @media screen and (max-width: 1320px){
-    nav div ul li{
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-    nav div ul li:first-child{
-      margin-left: 20px;
-    }
-    nav div ul li:last-child{
-      margin-right: 10px;
-    }
-  } */
+ .nav-item {
+    display: inline-block;
+    margin-right: 1em;
+  }
+  .nav-item a[href]:not(:hover) {
+    text-decoration: none;
+  }
+  .nav-item-active {
+    font-weight: 700;
+    text-decoration: underline;
+  } 
+};*/
 
   @media screen and (max-width: 915px){
-    #navbar{
-      padding: 0px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      padding: 0px;
-      border-radius: 0px 0px 10px 10px;
-      line-height: 0px;
-      z-index: 9990;
-    }
     .logo{
       display: flex;
       font-size: 1em;
     }
-    #navLinks{
+    /* .nav {
+      /* padding: 0;
+      list-style: none;
+      float: left;
+      margin-left: 1em; 
+    } */
+    .nav-item {
+     font-size: 0.75em;
+    }
+    .nav-item a[href]:not(:hover) {
+      text-decoration: none;
+    }
+    .nav-item-active {
+      font-weight: 700;
+      text-decoration: underline;
+    }
+    /* #navLinks{
       padding: 0px;
-    }
-    #navLinks li a{
+    } */
+    /* #navLinks li a{
       font-size: 1rem;
-    }
-     #navbar{
+    } */
+     /* #navbar{
        padding: 0px;
        display: flex;
        flex-direction: column;
@@ -187,13 +221,13 @@
        border-radius: 0px 0px 10px 10px;
        line-height: 0px;
        z-index: 9990;
-     }
-     #navLinks{
+     } */
+     /* #navLinks{
        padding: 0px;
      }
      #navLinks li a{
        font-size: 1rem;
-     }
+     } */
   }; 
   /* @media screen and (max-width: 717px){
     nav{
@@ -202,22 +236,19 @@
     }
   } */
   @media screen and (max-width: 500px){
-    /* .logo{
+    .logo{
       font-size: 1.8em;
-    } */
-    #mobileTap{
-      display: block;
     }
     .hideMe{
       display: none;
     }
-    nav div ul li{
+    .nav div ul li{
       margin: 30px 5px 0px 5px;
     }
-    nav div ul li:first-child{
+    .nav div ul li:first-child{
       margin-left: 2px;
     }
-    nav div ul li:last-child{
+    .nav div ul li:last-child{
       margin-right: 2px;
     }
     #navLinks{
