--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,11 +13,10 @@
   </head>
   <body>
     <header>
-      <h1 class="home"><a href="{{ '/' | url }}" class="logo">{{ metadata.title }}</a></h1>
+      <h1 class="home logo"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
 
       {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
-      <ul class="nav">
-      {# <li class="nav-item"><a>Homee</a></li> #}
+      <ul class="nav" id="nav">
       {%- for entry in collections.all | eleventyNavigation %}
         <li class="nav-item{% if entry.url == page.url %} nav-item-active{% endif %}"><a href="{{ entry.url | url }}">{{ entry.title }}</a></li>
       {%- endfor %}
