--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,16 +1,16 @@
-<h1>Resources to become a Software Engineer</h1>
+<h1>BCS Software Engineering Level 4 Apprenticeship</h1>
 
-<p>My route to becoming a Software Engineer was indirect. My degree is a bachelor of arts in History, and I got into tech sales when I graduated. Whilst I wouldn't change any of my experiences for the world, I do wish I had known more about Software Engineering at the time. These posts are a list of resources for all people looking to get into Software Engineering, or just get started in their tech career. </p>
+<p>My experience of the BCS Software Engineering Level 4 Apprenticeship with some hints and tips I've picked up along the way . </p>
 
 <ol reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
 {% for post in postslist | reverse %}
   <li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
     <a href="{{ post.url | url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-    <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
+    {# <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
     {% for tag in post.data.tags | filterTagList %}
       {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
       <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
-    {% endfor %}
+    {% endfor %} #}
   </li>
 {% endfor %}
 </ol>
