--- a/css/index.css
+++ b/css/index.css
@@ -328,11 +328,10 @@ code {
 }
 
 /*Blog*/
-/* .blog{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-} */
+.blog{
+ margin-left: 20px;
+ margin-right: 20px;
+}
 
 /* Tags */
 .post-tag {
