--- a/index.njk
+++ b/index.njk
@@ -33,7 +33,7 @@ Welcome
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
-<p>More posts can be found in <a href="{{ '/resources/' | url }}">the apprenticeship section</a>.</p>
+<p>More posts can be found in <a href="{{ '/posts/' | url }}">the apprenticeship section</a>.</p>
 </li>
 
  <li class="blog">
@@ -45,7 +45,7 @@ Welcome
 {% set resourcelistCounter = collections.resources | length %}
 {% include "resourcelist.njk" %}
 
-<p>More posts can be found in <a href="{{ '/apprenticeship/' | url }}">the resources section</a>.</p>
+<p>More posts can be found in <a href="{{ '/resources/' | url }}">the resources section</a>.</p>
 </li> 
 
 </ul>
@@ -66,22 +66,22 @@ Welcome
 #}
 
 <li class="square">
+<a href="/projects/">
 <h2>Projects</h2>
-<a>
 <img src="img/landing/5.jpeg">
 </a>
 </li>
 
 <li class="square">
+<a href="/news/">
 <h2>News</h2>
-<a>
 <img src="img/landing/4.jpeg"></img>
 </a>
 </li>
 
 <li class="square">
+<a href="/hobbies/">
 <h2>Hobbies</h2>
-<a>
 <img src="img/landing/2.jpeg"></img>
 </a>
 </li>
