--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 templateClass: tmpl-post
 ---
-<section>
+<main class="markDowns">
 <h2>{{ title }}</h2>
 
 <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
@@ -23,3 +23,4 @@ templateClass: tmpl-post
 </ul>
 {%- endif %}
 </section>
+</main>
