--- a/index.njk
+++ b/index.njk
@@ -13,7 +13,7 @@ eleventyNavigation:
  <img src="img/landing/25461.jpg" class="me"></img> 
 </section>
 <section class="intro">
-<p>Join me on my journey as a Junior Software Engineer. 
+<p class="blurb">Join me on my journey as a Junior Software Engineer. 
 I am currently a full time enginner and full time student, working through the BCS Level 4 Software Enineering Apprenticeship.</p>
 </section>
 
@@ -89,4 +89,4 @@ Welcome
 </ul>
 </section>   
 
-
+{{contentful}}
