--- a/index.njk
+++ b/index.njk
@@ -1,10 +1,9 @@
 ---
 layout: layouts/home.njk
-pagination:
-  size: 1
-  alias: page
 ---
-
+{# pagination:
+  size: 1
+  alias: page #}
 {# eleventyNavigation:
   key: Home
   order: 1 #}
