--- a/tags.njk
+++ b/tags.njk
@@ -9,7 +9,7 @@ pagination:
     - post
     - posts
     - tagList
-    - resource
+    - learning
   addAllPagesToCollections: true
 layout: layouts/home.njk
 eleventyComputed:
