--- a/css/base.css
+++ b/css/base.css
@@ -24,6 +24,8 @@
   .logo{
     height: auto;
     display: inline-block;
+    display: flex;
+    flex-grow: 1;
     outline: none;
     color: var(--white);
     margin-left: 20px;
@@ -38,7 +40,6 @@
   .nav {
     list-style: none;
     display: flex;
-    align-self: flex-end;
   }
   .nav-item {
     display: inline-block;
